Bug 440001 - Yakuake is blue during hide animation
Summary: Yakuake is blue during hide animation
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.22.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-18 11:48 UTC by d3coder
Modified: 2021-08-06 17:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.5
Sentry Crash Report:


Attachments
yakuake with issue (1.43 MB, video/webm)
2021-07-18 11:48 UTC, d3coder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description d3coder 2021-07-18 11:48:50 UTC
Created attachment 140156 [details]
yakuake with issue

SUMMARY
Yakuake is blue during hide animation. I think this is breeze outline color.

STEPS TO REPRODUCE
1. Start yakuake
2. Show yakuake (F12)
3. Hide yakuake (F12)


OBSERVED RESULT
During hide animation you will observe that yakuake is blue

EXPECTED RESULT
Yakuake doesn't is not blue


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2
Kernel Version: 5.12.15-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4600


ADDITIONAL INFORMATION
Comment 1 Vlad Zahorodnii 2021-07-19 08:13:37 UTC
Cannot reproduce the issue on Wayland.
Comment 2 Bug Janitor Service 2021-08-04 17:37:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1223
Comment 3 Vlad Zahorodnii 2021-08-05 06:03:25 UTC
Git commit e94fbcd853fe4101c9d82b4df0803c7b6e97c0d4 by Vlad Zahorodnii.
Committed on 05/08/2021 at 06:03.
Pushed by vladz into branch 'master'.

Copy shape region to Deleted

Currently, the shape region is not copied to the Deleted. If either
SurfaceItemX11 or SurfaceItemXwayland needs to build quads for a shaped
window, it won't be able to do so properly because the corresponding
x11 window is long time gone.

If the shape region changes before the window is unmapped, you may still
see visual artifacts. Unfortunately, the only way to fix that bug is to
switch to wayland.
Related: bug 438458, bug 435378

M  +2    -0    src/toplevel.cpp

https://invent.kde.org/plasma/kwin/commit/e94fbcd853fe4101c9d82b4df0803c7b6e97c0d4
Comment 4 Vlad Zahorodnii 2021-08-05 06:04:02 UTC
Git commit ad62f7c3b7ba60182ae42d1573dae8fd57560ad7 by Vlad Zahorodnii.
Committed on 05/08/2021 at 06:03.
Pushed by vladz into branch 'Plasma/5.22'.

Copy shape region to Deleted

Currently, the shape region is not copied to the Deleted. If either
SurfaceItemX11 or SurfaceItemXwayland needs to build quads for a shaped
window, it won't be able to do so properly because the corresponding
x11 window is long time gone.

If the shape region changes before the window is unmapped, you may still
see visual artifacts. Unfortunately, the only way to fix that bug is to
switch to wayland.
Related: bug 438458, bug 435378


(cherry picked from commit e94fbcd853fe4101c9d82b4df0803c7b6e97c0d4)

M  +2    -0    src/toplevel.cpp

https://invent.kde.org/plasma/kwin/commit/ad62f7c3b7ba60182ae42d1573dae8fd57560ad7